amazon-s3/5.7/modules/ROOT/pages/amazon-s3-connector-studio.adoc
= Use Studio to Configure Amazon S3 Connector 5.7
:page-aliases: connectors::amazon/amazon-s3-connector-studio.adoc

Anypoint Studio (Studio) editors help you design and update your Mule applications, properties, and configuration files.

To add and configure a connector in Studio:

. <<create-mule-project,Create a Mule project>>.
. <<add-connector-to-project,Add the connector to your Mule project>>.
. <<configure-source,Configure a source for the connector's flow>>.
. <<add-connector-operation,Add a connector operation to the flow>>.
. <<configure-global-element,Configure a global element for the connector>>.
. <<configure-other-fields,Configure the Other Connector Fields>>.

When you run the connector, you can view the app log to check for problems in real time, as described in <<view-app-log,View the App Log>>.

If you are new to configuring connectors in Studio, see xref:connectors::introduction/intro-config-use-studio.adoc[Use Studio to Configure a Connector]. If, after reading this topic, you need additional information about the connector fields, see the xref:amazon-s3-connector-reference.adoc[Amazon S3 Reference].

[[create-mule-project]]
== Create a Mule Project

In Studio, create a new Mule project in which to add and configure the connector:

. In Studio, select *File > New > Mule Project*.
. Enter a name for your Mule project and click *Finish*.

[[add-connector-to-project]]
== Add the Connector to Your Mule Project

Add Amazon S3 to your Mule project to automatically populate the XML code with the connector's namespace and schema location and to add the required dependencies to the project's `pom.xml` file:

. In the *Mule Palette* view, click *(X) Search in Exchange*.
. In the *Add Dependencies to Project* window, type `amazon s3` in the search field.
. Click *Amazon S3* in *Available modules*.
. Click *Add*.
. Click *Finish*.

Adding a connector to a Mule project in Studio does not make that connector available to other projects in your Studio workspace.

[[configure-source]]
== Configure a Source

A source initiates a flow when a specified condition is met.
You can configure one of these sources to use with Amazon S3:

* *On Deleted Object*
+
Initiates access to your app when an Amazon S3 object is deleted
+
* *On New Object*
+
Initiates access to your app when an Amazon S3 object is created

For example, to configure an *On Deleted Object* source, follow these steps:

. In the *Mule Palette* view, select *Amazon S3 > On Deleted Object*.
. Drag *On Deleted Object* to the Studio canvas.
. On the *On Deleted Object* configuration screen, optionally change the value of the *Display Name* field.
. Specify values for the following fields:
+
* *Bucket name* +
Name of the bucket containing the multipart upload to abort
* *Notification queue name* +
Queue name used to notify users when a new object is created or deleted in an S3 bucket
* *Scheduling Strategy* +
Configures the scheduler that triggers the polling
. Click the plus sign (*+*) next to the *Connector configuration* field to configure a global element that can be used by all instances of the *On Deleted Object* source in the app.
. On the *General* tab, specify the connection information for the connector.
. On the *Advanced* tab, optionally specify reconnection information, including a reconnection strategy.
. Click *Test Connection* to confirm that Mule can connect with the specified server.
. Click *OK*.

[[add-connector-operation]]
== Add a Connector Operation to the Flow

When you add a connector operation to your flow, you are specifying an action for that connector to perform.

To add an operation for Amazon S3, follow these steps:

. In the *Mule Palette* view, select *Amazon S3* and then select the desired operation.
. Drag the operation onto the Studio canvas to the right of the source.

[[configure-global-element]]
== Configure a Global Element for the Connector

When you configure a connector, configure a global element that all instances of that connector in the app can use. Configuring a global element requires you to provide the authentication credentials that the connector requires to access the target Amazon S3 system. Amazon S3 supports basic and role authentication.

+
You can either enter your credentials into the global configuration properties or reference a configuration placed in a file in the `src` folder of your project file that contains these values. For simpler maintenance and better reuse of your project, use a configuration file.
+
. If you are using the default Amazon S3 storage, leave the default entries for *Proxy*, *Security*, and *Advanced* tabs.
. If you are connecting to different storage than the default, AWS S3, specify its URL in the *Advanced* tab's *S3 Compatible Storage URL* field.


To configure the global element for Amazon S3 Connector, follow these steps:

. Select the operation in the Studio canvas.
. In the configuration screen for the operation, click the plus sign (*+*) next to the *Connector configuration* field to access the global element configuration fields.
. On the *General* tab, in *Connection*, select the authentication method to configure:
  * <<basic-authentication,Basic Authentication>>
  * <<role-authentication,Role Authentication>>

+
You can reference a configuration file that contains ANT-style property placeholders (recommended), or you can enter your authorization credentials in the global configuration properties. For information about the benefits of using property placeholders and how to configure them, see xref:connectors::introduction/intro-connector-configuration-overview.adoc[Anypoint Connector Configuration].
+
. On the *Advanced* tab, optionally specify reconnection information, including a reconnection strategy.
. Click *Test Connection* to confirm that Mule can connect with the specified server.
. Click *OK*.

+
Validating a connection with *Test Connection* requires that you have permission in AWS IAM to the action `s3:ListAllMyBuckets`. If you don’t have this permission, the test fails. However, you can still use the connector and the operations to which you have access.
+
Access to operations on Amazon S3 is further controlled through policies. It is not always possible to validate your credentials before the exact operation for which you have access completes. This can vary based on the bucket name and other parameters. For example, the test connection can fail if your credentials have a restricted policy.

[[basic-authentication]]
=== Basic Authentication

Enter the following information on the *General* tab of the *Global Element Properties* screen to configure Basic authentication:

[%header,cols="30s,70a"]
|===
|Field |User Action
|Name |Enter the configuration name.
|Connection | Select `Basic`.
|Session Token | Optionally enter the session token provided by Amazon Security Token Service (STS).
|Access Key | Enter the access key provided by Amazon.
|Secret Key | Enter the secret key provided by Amazon.
|Region Endpoint | Select the region endpoint for the service.
|===

The following screenshot shows an example of configuring the *General* tab for Basic authentication:

.Basic authentication fields for *General* tab
image::amazon-s3-01.png[To configure authentication, select `Basic` in the *Connection* field and then complete the fields on the *General* tab.]

Now, enter the following information on the *Advanced* tab of the *Global Element Properties* screen to configure Basic authentication:

[%header,cols="30s,70a"]
|===
|Field |User Action
|Name |Enter the configuration name.
|Connection | Select `Basic`.
|Connection Timeout | Amount of time to wait (in seconds) when initially establishing a connection before the connector gives up and times out. A value of 0 means infinity and is not recommended.
|Connection timeout unit | Time unit used in the connection timeout configurations.
|Max connections | Sets the maximum number of allowed open HTTP connections.
|Socket Timeout | Amount of time to wait (in seconds) for data to be transferred over an established, open connection before the connection times out. A value of 0 means infinity and is not recommended.
|Socket timeout unit | Time unit used in the socket timeout configurations.
|Try Default AWS Credentials Provider Chain | Set to `true` to obtain credentials from the AWS environment.
|Custom Service Endpoint | Sets a custom service endpoint. Useful when a non-standard service endpoint is required, such as a VPC endpoint.
|Reconnection | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn’t pass after exhausting the associated reconnection strategy.
|===

The following screenshot shows an example of configuring the *Advanced* tab for Basic authentication:

.Basic authentication fields for *Advanced* tab
image::amazon-s3-09.png[To configure authentication, select `Basic` in the *Connection* field and then complete the fields on the *Advanced* tab.]

[[role-authentication]]
=== Role Authentication

Enter the following information on the *General* tab of the global element configuration screen to configure Role authentication:

[%header,cols="30s,70a"]
|===
|Field |User Action
|Name |Enter the configuration name.
|Connection | Select `Role`.
|Role ARN | Enter the role to assume to gain cross-account access.
|Access Key | Enter the access key provided by Amazon.
|Secret Key | Enter the secret key provided by Amazon.
|Region Endpoint | Select the region endpoint for the service.
|===

The following screenshot shows an example of configuring the *General* tab for Role authentication:

.Role authentication fields for *General* tab
image::amazon-s3-08.png[To configure Role authentication, select `Role` in the *Connection* field and then complete the fields on the *General* tab.]

Now, enter the following information on the *Advanced* tab of the *Global Element Properties* screen to configure Role authentication:

[%header,cols="30s,70a"]
|===
|Field |User Action
|Name |Enter the configuration name.
|Connection | Select `Role`.
|Force Global Bucket Access | Enable this option to execute bucket-related operations against other regions rather than the one configured for this connector.
|S3 Compatible Storage URL (Deprecated) | URL to connect to when S3-compatible storage is used. If blank, the connector uses the default AWS S3 URL. If both the Custom Service Endpoint and Storage Url are specified, then the Custom Service Endpoint is used.
|Connection Timeout | Amount of time to wait (in seconds) when initially establishing a connection before the connector gives up and times out. A value of 0 means infinity and is not recommended.
|Connection timeout unit | Time unit used in the connection timeout configurations.
|Max connections | Sets the maximum number of allowed open HTTP connections.
|Socket Timeout | Amount of time to wait (in seconds) for data to be transferred over an established, open connection before the connection times out. A value of 0 means infinity and is not recommended.
|Socket timeout unit | Time unit used in the socket timeout configurations.
|Try Default AWS Credentials Provider Chain | Set to `true` to obtain credentials from the AWS environment.
|Custom Service Endpoint | Sets a custom service endpoint. Useful when a non-standard service endpoint is required, such as a VPC endpoint.
|Reconnection | When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn’t pass after exhausting the associated reconnection strategy.
|===

The following screenshot shows an example of configuring the *Advanced* tab for Role authentication:

.Role authentication fields for *Advanced* tab
image::amazon-s3-10.png[To configure authentication, select `Role` in the *Connection* field and then complete the fields on the *Advanced* tab.]

== Example of Configuring S3-Compatible Storage

The https://github.com/minio/[MinIO Project] is one example of Amazon S3 storage. If you configure this storage locally, set the S3 Compatible Storage URL to `+http://127.0.0.1:9000+`.

[[view-app-log]]
== View the App Log

To check for problems, you can view the app log as follows:

* If you’re running the app from Anypoint Platform, the output is visible in the Anypoint Studio console window.
* If you’re running the app using Mule from the command line, the app log is visible in your OS console.

Unless the log file path is customized in the app’s log file (`log4j2.xml`), you can also view the app log in the default location `MULE_HOME/logs/<app-name>.log`.

== Next Steps

After configuring Studio, see the xref:amazon-s3-connector-examples.adoc[Examples] topic for more configuration ideas.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:connectors::introduction/intro-config-use-studio.adoc[Use Studio to Configure a Connector]
* xref:amazon-s3-connector-reference.adoc[Amazon S3 Connector Reference]
* https://help.mulesoft.com[MuleSoft Help Center]
